--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ElijahPrince73/Natours-API#readme",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.0"
