feat: connecting to database

--- a/config.env
+++ b/config.env
@@ -1,4 +1,5 @@
 NODE_ENV = development
 PORT = 8000
-USER = ELI
-PASSWORD = 123456
+DATABASE_PASSWORD = WGcBSmXk5WVqKN0u
+DATABASE_USERNAME = Prince
+DATABASE=mongodb+srv://Prince:<PASSWORD>@natours.iickbkr.mongodb.net/?retryWrites=true&w=majority&appName=Natours
