fix: Added database name

--- a/config.env
+++ b/config.env
@@ -2,4 +2,4 @@ NODE_ENV = development
 PORT = 8000
 DATABASE_PASSWORD = WGcBSmXk5WVqKN0u
 DATABASE_USERNAME = Prince
-DATABASE=mongodb+srv://Prince:<PASSWORD>@natours.iickbkr.mongodb.net/?retryWrites=true&w=majority&appName=Natours
+DATABASE=mongodb+srv://Prince:<PASSWORD>@natours.iickbkr.mongodb.net/Natours?retryWrites=true&w=majority&appName=Natours
