--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/ElijahPrince73/Natours-API#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mongoose": "^8.5.2",
