Add JWT authentication to user signup and update environment configuration

--- a/config.env
+++ b/config.env
@@ -3,3 +3,5 @@ PORT = 8000
 DATABASE_PASSWORD = WGcBSmXk5WVqKN0u
 DATABASE_USERNAME = Prince
 DATABASE=mongodb+srv://Prince:<PASSWORD>@natours.iickbkr.mongodb.net/Natours?retryWrites=true&w=majority&appName=Natours
+JWT_SECRET=&i6*HD6*!&BRhY%^eVy3!UnzokjYt^gA
+JWT_EXPIRES_IN=90d
