--- a/config.env
+++ b/config.env
@@ -5,6 +5,7 @@ DATABASE_USERNAME = Prince
 DATABASE=mongodb+srv://Prince:<PASSWORD>@natours.iickbkr.mongodb.net/Natours?retryWrites=true&w=majority&appName=Natours
 JWT_SECRET=&i6*HD6*!&BRhY%^eVy3!UnzokjYt^gA
 JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES_IN=90
 
 EMAIL_USERNAME=829c53756bbade
 EMAIL_PASSWORD=bb09efd5ceffe6
