--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,7 @@
 {
+  "use": "@vercel/node@latest",
+  "src": "api/server.js",
+  "config": { "zeroConfig": true },
   "version": 2,
-  "builds": [
-    {
-      "src": "/server.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/server.js"
-    }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/api" }]
 }
